# adk_cost_tracker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/adk_cost_tracker/: __init__.py  admin.py  budget_guard.py  example_agent.py  example_multi_provider.py  plugin.py  pricing.py  pricing_admin.py  report.py  store.py
src/adk_cost_tracker/trackers/: bedrock_tracker.py  openai_tracker.py
tests/: conftest.py  test_openai_tracker.py  test_pricing.py  test_store.py
