[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adk-cost-tracker"
version = "0.1.4"
description = "Centralized, provider-agnostic LLM cost tracking and pricing management for Google ADK"
readme = "README.md"
authors = [{ name = "Sthitaprajna Sahoo", email = "sthitaprajna@example.com" }]
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["llm", "cost", "tracking", "google-adk", "observability", "finops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Zero hard dependencies — core library is purely agnostic
dependencies = []

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
yaml     = ["PyYAML>=6.0"]
all      = [
    "asyncpg>=0.29",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "twine>=5.0",
]

[project.scripts]
adk-cost-report = "adk_cost_tracker.report:main"

[project.urls]
Homepage   = "https://github.com/STHITAPRAJNAS/adk_cost_tracker"
Repository = "https://github.com/STHITAPRAJNAS/adk_cost_tracker"
Issues     = "https://github.com/STHITAPRAJNAS/adk_cost_tracker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/adk_cost_tracker"]

# ── pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"

# ── ruff (linting) ────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select         = ["E", "F", "I", "UP", "B"]

# ── mypy ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict         = false
ignore_missing_imports = true
